--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -2,11 +2,25 @@
   <h2>Accordions Component &lt;samAccordions&gt;</h2>
   <div class="usa-width-one-whole">
     <h3>Accordions without border</h3>
-    <samAccordions [accordionsName]="'noBorder'" [accordionsData]="accordionsData" [bordered]="false"></samAccordions>
+    <samAccordion>
+      <samAccordionSection headerText="Section title 1" name="aria-friendly-section-name">
+        <a href>A link</a>
+      </samAccordionSection>
+      <samAccordionSection headerText="Section title 2" name="aria-friendly-section-name-2">
+        <a href>A second link</a>
+      </samAccordionSection>
+    </samAccordion>
   </div>
   <div class="usa-width-one-whole">
-    <h3>Accordions with border</h3>
-    <samAccordions [accordionsName]="'bordered'" [accordionsData]="accordionsData" [bordered]="true">></samAccordions>
+    <h3>Accordions with border, and initial selected tab</h3>
+    <samAccordion [expandIndex]="1" [bordered]="true">
+      <samAccordionSection headerText="Section title 1" name="aria-friendly-section-name">
+        <a href>A link</a>
+      </samAccordionSection>
+      <samAccordionSection headerText="Section title 2" name="aria-friendly-section-name-2">
+        <a href>A second link</a>
+      </samAccordionSection>
+    </samAccordion>
   </div>
 </div>
 <div class="usa-grid">
