--- a/src/styles/components/_searchbar.scss
+++ b/src/styles/components/_searchbar.scss
@@ -33,9 +33,9 @@
   /** Adjust the width of the input search bar**/
   .div-fill{
     display:block;
-    width: auto;
-    overflow: hidden;
-    float: none;
+    width: 57.6rem;
+    overflow: visible;
+    float: left;
     height: 3.3rem;
   }
 
@@ -53,11 +53,14 @@
   }
 
   .search-inputbar{
-    position: absolute;
-    top:0;
-    left: 0;
-    max-width: 800px;
+    //position: absolute;
+    //top:0;
+    //left: 0;
+    //max-width: 800px;
     width: 100%;
+    height: 3.25rem;
+    margin: 0rem;
+    max-width: 57.6rem;
   }
 
   .reset-icon,.reset-icon-active{
