Fix new to sam.gov unit test and restructure image library html

--- a/src/app/Help/sections/new-to-sam/new-to-sam.template.html
+++ b/src/app/Help/sections/new-to-sam/new-to-sam.template.html
@@ -87,13 +87,13 @@
       </p>
     </div>
     <div class="usa-grid-full">
-      <imageLibrary [name]="new-to-sam-1" [data]="data"></imageLibrary>
+      <imageLibrary [name]="new-to-sam-1" [data]="data" [showDetailTitle]="false"></imageLibrary>
     </div>
     <div class="usa-grid-full m_T-3x">
-      <imageLibrary [name]="new-to-sam-2" [data]="data"></imageLibrary>
+      <imageLibrary [name]="new-to-sam-2" [data]="data" [showDetailTitle]="false"></imageLibrary>
     </div>
     <div class="usa-grid-full m_T-3x">
-      <imageLibrary [name]="new-to-sam-3" [data]="data"></imageLibrary>
+      <imageLibrary [name]="new-to-sam-3" [data]="data" [showDetailTitle]="false"></imageLibrary>
     </div>
   </div>
 
