--- a/src/app/Help/image-library/image-library.template.html
+++ b/src/app/Help/image-library/image-library.template.html
@@ -23,13 +23,12 @@
 
 
   <div class="usa-width-one-whole m_L-8x relative" *ngIf = "detailObj.showDetail">
-    <div class="usa-width-one-twelfth div-right" *ngIf ="largeScreen()">&nbsp;</div>
-    <div class="div-fill relative black-border">
-      <div class="usa-width-one-whole div-fill relative">
+    <div class="relative black-border" [ngClass]="{'detail-div':largeScreen()}">
+      <div class="usa-width-one-whole relative">
 
         <a class="image-library-close" (click)="closeReferenceDetail()">Close</a>
         <div class="usa-width-one-whole m_T-4x">
-          <h3 class="p_L-2x">{{detailObj.item.title}}</h3>
+          <h3 class="p_L-2x" *ngIf="showDetailTitle">{{detailObj.item.title}}</h3>
           <p class="p_L-5x p_R-2x p_B-1x detail-text">{{detailObj.item.detail}}</p>
           <span class="reference-content-link usa-external_link"><a  href="{{detailObj.item.url}}">{{detailObj.item.link}}</a></span>
         </div>
