--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -26,6 +26,7 @@
 @import 'components/multiselect-dropdown';
 @import 'components/alert-item';
 @import 'components/alert-footer';
+@import 'components/modal';
 
 @import 'pages/assistance-listing';
 @import 'pages/help';
