--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -275,3 +275,29 @@
   </div>
 </div>
 <br/>
+<div class="usa-grid">
+  <h2 class="usa-width-one">Modal &lt;samModal&gt;</h2>
+  <div class="usa-width-one-half">
+    <samModal [showClose]="true" #modal1 [config]="modalConfig">
+    </samModal>
+    <label>Title</label>
+    <input [(ngModel)]="modalConfig.title" type="text">
+    <label>Description</label>
+    <input [(ngModel)]="modalConfig.description" type="text">
+    <label>Type</label>
+    <select [(ngModel)]="modalConfig.type">
+      <option *ngFor="let type of modalAlertTypes">{{ type }}</option>
+    </select>
+    <button (click)="onModalInitClick()">Show Modal</button>
+    
+    <p>Modal with 'transclude content'</p>
+    <button (click)="onModalInitClick2()">Show Modal 2</button>
+    <samModal #modal2 [config]="modalConfig2">
+      <p>This is a notification...</p>
+      <div style="text-align:center;">
+        <button (click)="modal2.onDismissClick()">Ok</button>
+      </div>
+    </samModal>
+  </div>
+</div>
+<br/>
