--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -60,7 +60,9 @@
     <samLabel [labelType]="'big'" [labelText]="'Big Label'"></samLabel>
   </div>
   <div class="usa-width-one-sixth">
-    <samLabel [labelType]="'small'" [labelText]="'Small Label'"></samLabel>
+    <samLabel
+      [labelType]="'small'"
+      [labelText]="'Small Label'"></samLabel>
   </div>
 </div>
 <div class="usa-grid">
@@ -106,6 +108,46 @@
   <div class="usa-width-one-third">
     <h3>Model</h3>
     <pre><code>{{selectModel | json}}</code></pre>
+  </div>
+</div>
+<div class="usa-grid">
+  <h2>Select Text &lt;samText&gt;</h2>
+  <div class="usa-width-one-third">
+    <samText
+      [(ngModel)]="textModel"
+      [name]="textConfig.name"
+      [label]="textConfig.label"
+      [hint]="textConfig.hint"
+      [errorMessage]="textConfig.errorMessage"
+      [disabled]="textConfig.disabled">
+    </samText>
+  </div>
+  <div class="usa-width-one-third">
+    <fieldset class="usa-fieldset-inputs usa-sans">
+      <legend><h3>Options</h3></legend>
+      <ul class="usa-unstyled-list">
+        <li>
+          <input id="isDisabled" type="checkbox" [(ngModel)]="textConfig.disabled">
+          <label for="isDisabled">Disabled</label>
+        </li>
+        <li>
+          <label>Label text</label>
+          <input type="text" [(ngModel)]="textConfig.label">
+        </li>
+        <li>
+          <label>Error message text</label>
+          <input type="text" [(ngModel)]="textConfig.errorMessage">
+        </li>
+        <li>
+          <label>Hint text</label>
+          <input type="text" [(ngModel)]="textConfig.hint">
+        </li>
+      </ul>
+    </fieldset>
+  </div>
+  <div class="usa-width-one-third">
+    <h3>Model</h3>
+    <pre><code>{{textModel}}</code></pre>
   </div>
 </div>
 <div class="usa-grid">
