--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -35,6 +35,7 @@
 @import 'pages/search';
 @import 'pages/reference-library';
 @import 'pages/alerts';
+@import 'pages/help-accounts';
 
 html, body{
   height: 100%;
