--- a/src/app/alerts/alert-item/alert-item.template.html
+++ b/src/app/alerts/alert-item/alert-item.template.html
@@ -1,22 +1,35 @@
-<div class="alert-type-indicator" [ngClass]="alert.colorClass()">
-  <i class="alert-type-icon fa" [ngClass]="alert.iconClass()"></i>{{alert.severity()}}
-</div>
-<div class="alert-item usa-grid-full">
-  <div class="usa-width-three-fourths">
-    <h2 class="alert-title">{{alert.title()}}</h2>
-    <div class="alert-body">
-      {{alert.description()}}
+<div ngIf="!isEditing">
+  <div>
+    <div class="alert-type-indicator" [ngClass]="alert.colorClass()">
+      <i class="alert-type-icon fa" [ngClass]="alert.iconClass()"></i>{{alert.severity()}}
+    </div>
+    <div class="pull-right">
+      <button class="usa-button-icon" (click)="onEditClick()" title="edit"><i class="fa fa-inverse fa-pencil"></i><span class="usa-sr-only">Edit</span></button>
+      <button class="usa-button-icon" (click)="onDeleteClick()" title="delete"><i class="fa fa-trash"></i><span class="usa-sr-only">Delete</span></button>
     </div>
   </div>
-  <div class="usa-width-one-fourth">
-    <div class="alert-right-item">
-      Published Date: {{alert.publishedDate() | dateFormat: 'MMM DD, YYYY'}}
+  <div class="alert-item usa-grid-full">
+    <div class="usa-width-three-fourths">
+      <h2 class="alert-title clearfix">
+        {{alert.title()}}
+      </h2>
+      <div class="alert-body">
+        {{alert.description()}}
+      </div>
     </div>
-    <div class="alert-right-item">
-      End Date: {{alert.endDate() | dateFormat: 'MMM DD, YYYY'}}
-    </div>
-    <div class="alert-right-item">
-      Status: {{alert.status()}}
+    <div class="usa-width-one-fourth">
+      <div class="alert-right-item">
+        Published Date: {{alert.publishedDate() | dateFormat: 'MMM DD, YYYY'}}
+      </div>
+      <div class="alert-right-item">
+        End Date: {{alert.endDate() | dateFormat: 'MMM DD, YYYY'}}
+      </div>
+      <div class="alert-right-item">
+        Status: {{alert.status()}}
+      </div>
     </div>
   </div>
 </div>
+<alert-edit *ngIf="isEditing" [alert]="alert">
+
+</alert-edit>
