--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -349,7 +349,7 @@
   <h2 class="usa-width-one">Date Entry &lt;samDateEntry&gt;</h2>
   <div class="usa-width-one-third">
     <samDateEntry [model]="dateModel"></samDateEntry>
-    <samDateEntry [model]="dateModel2" [prefix]="'example2'"></samDateEntry>
+    <samDateEntry [model]="dateModel2" [name]="'example2'"></samDateEntry>
   </div>
   <div class="usa-width-one-third">
     <h3>Model</h3>
