--- a/src/styles/components/_alert-item.scss
+++ b/src/styles/components/_alert-item.scss
@@ -1,3 +1,16 @@
+.alert-item.edit {
+  padding: 1em;
+  margin-bottom: 8px;
+
+  .alert-edit-title {
+    margin-top: 0;
+  }
+
+  .publish-date label {
+    margin-top: 0;
+  }
+}
+
 alert-item {
   .alert-body {
     margin-top: 8px;
