--- a/src/app/Help/sections/new-to-sam/new-to-sam.template.html
+++ b/src/app/Help/sections/new-to-sam/new-to-sam.template.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="usa-width-one-whole m_T-3x button-row">
-      <div class="usa-width-one-fourth col">
+      <div class="usa-width-one-fourth">
         <div class="usa-width-one-whole square-paragragh-area">
           <h5 class="centered">Assistance</h5>
           <p class="m_0 p_T-1x small-text">His vocent sanctus invidunt te, pri ameto portere et, no sed habeo.</p>
@@ -42,7 +42,7 @@
           <p class="m_0 p_T-1x small-text">His vocent sanctus invidunt te, pri ameto portere et, no sed habeo.</p>
         </div>
       </div>
-      <div class="usa-width-one-fourth col">
+      <div class="usa-width-one-fourth">
         <div class="usa-width-one-whole square-button" (click)="openImageLibrary('area1')">
           <h5 class="centered">Lipsum Text1</h5>
           <h5 class="centered">Learn more</h5>
@@ -52,7 +52,7 @@
           <h5 class="centered">Learn more</h5>
         </div>
       </div>
-      <div class="usa-width-one-fourth col">
+      <div class="usa-width-one-fourth">
         <div class="usa-width-one-whole square-button" (click)="openImageLibrary('area3')">
           <h5 class="centered">Lipsum Text3</h5>
           <h5 class="centered">Learn more</h5>
@@ -62,7 +62,7 @@
           <h5 class="centered">Learn more</h5>
         </div>
       </div>
-      <div class="usa-width-one-fourth long-button col" (click)="openImageLibrary('area5')">
+      <div class="usa-width-one-fourth long-button" (click)="openImageLibrary('area5')">
         <h5 class="centered m_T-6x">Lipsum Text4</h5>
         <h5 class="centered">Learn more</h5>
       </div>
