--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -358,6 +358,7 @@
     <h2>Awards Summary</h2>
     <div class="usa-grid-full" *ngIf="relatedOpportunities">
       <ng-container *ngFor="let element of relatedOpportunities">
+        <!--<br> TAGS ARE TEMPORARY AND WILL BE REMOVED IN THE THEMING TASK-->
         <span>{{element.data?.title}}</span><br>
         <span><b>Contractor Awarded DUNS: </b>{{element.data?.award?.awardee?.duns}}</span><br>
         <span><b>Contractor Awarded Address: </b></span><br>
