initial version featured result

--- a/src/styles/pages/_search.scss
+++ b/src/styles/pages/_search.scss
@@ -14,4 +14,13 @@
   li:before {
     content: none;
   }
+
+  .logo-small {
+    width:25%;
+    height:25%;
+  }
+
+  .featured-result-title {
+    text-align: center;
+  }
 }
