Add comments for explanation

--- a/src/app/Help/sections/new-to-sam/new-to-sam.template.html
+++ b/src/app/Help/sections/new-to-sam/new-to-sam.template.html
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="usa-width-one-fourth long-button" (click)="openImageLibrary('area5')">
-        <h5 class="centered m_T-6x">Lipsum Text4</h5>
+        <h5 class="centered m_T-6x p_T-3x">Lipsum Text5</h5>
         <h5 class="centered">Learn more</h5>
       </div>
     </div>
