--- a/src/app/Help/sections/new-to-sam/new-to-sam.template.html
+++ b/src/app/Help/sections/new-to-sam/new-to-sam.template.html
@@ -87,7 +87,7 @@
       </p>
     </div>
     <div class="usa-grid-full m_T-4x" *ngFor="let row of curImageGroup">
-      <imageLibrary [name]="new-to-sam-1" [data]="row" [showDetailTitle]="false" [isExternalLink]="false"></imageLibrary>
+      <imageLibrary [name]="new-to-sam" [data]="row" [showDetailTitle]="false" [isExternalLink]="false"></imageLibrary>
     </div>
 
   </div>
