--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -283,3 +283,11 @@
   </div>
 </div>
 <br/>
+<br/>
+<div class="usa-grid relative">
+  <h2 class="usa-grid-full">Image Library Component &lt;imageLibrary&gt;</h2>
+  <div class="usa-grid-full">
+    <imageLibrary [name]="'ImageLibrarySample'" [data]="imageLibraryData"></imageLibrary>
+  </div>
+</div>
+<br/>
