--- a/src/app/Help/sections/new-to-sam/new-to-sam.template.html
+++ b/src/app/Help/sections/new-to-sam/new-to-sam.template.html
@@ -86,8 +86,8 @@
         fuisset convenire an.
       </p>
     </div>
-    <div class="usa-grid-full m_T-4x" *ngFor="let row of curImageGroup">
-      <imageLibrary [name]="new-to-sam" [data]="row" [showDetailTitle]="false" [isExternalLink]="false"></imageLibrary>
+    <div class="usa-grid-full m_T-4x" *ngFor="let row of curImageGroup; let i = index">
+      <imageLibrary [name]="'new-to-sam-'+i" [data]="row" [showDetailTitle]="false" [isExternalLink]="false"></imageLibrary>
     </div>
 
   </div>
