--- a/src/app/alerts/alert-edit/alert-edit.template.html
+++ b/src/app/alerts/alert-edit/alert-edit.template.html
@@ -1,21 +1,25 @@
 <div class="alert-item usa-bgcolor-gold-lightest edit">
-  <h2 class="alert-edit-title">Add Alert</h2>
+  <h2 class="alert-edit-title">
+    <span *ngIf="mode === 'edit'">Edit</span>
+    <span *ngIf="mode === 'add'">Add</span>
+    Alert
+  </h2>
   <div class="usa-grid-full">
     <div class="usa-width-one-half">
-      <samText [name]="'title-input'" [ngModel]="''" [label]="'Title'"></samText>
-      <samTextarea [name]="'description-input'" [ngModel]="''" [label]="'Description'"></samTextarea>
+      <samSelect [options]="typeOptions" [name]="'alert-types'" [label]="'Type'" [model]="alert.severity()" (modelChange)="onSeverityChange($event)"></samSelect>
+      <samText [name]="'title-input'" [ngModel]="alert.title()" [label]="'Title'" (ngModelChange)="onTitleChange($event)"></samText>
+      <samTextarea [name]="'description-input'" [ngModel]="alert.description()" [label]="'Description'" (ngModelChange)="onDescriptionChange($event)"></samTextarea>
     </div>
     <div class="usa-width-one-half">
       <samDateEntry class='publish-date' [name]="'publish-date'" [label]="'Publish Date'"></samDateEntry>
       <samDateEntry [name]="'end-date'" [label]="'End Date'"></samDateEntry>
-      <samSelect [options]="typeOptions" [name]="'alert-types'" [label]="'Type'"></samSelect>
     </div>
   </div>
   <div class="alert-edit-actions clearfix">
     <div class="pull-right">
-      <div class="usa-button usa-button-primary">Publish</div>
-      <div class="usa-button usa-button-disabled">Draft</div>
-      <div class="usa-button usa-button-disabled">Cancel</div>
+      <div class="usa-button usa-button-primary" (click)="onPublishClick($event)">Publish</div>
+      <div class="usa-button usa-button-gray" (click)="onDraftClick($event)">Draft</div>
+      <div class="usa-button usa-button-gray" (click)="onCancelClick($event)">Cancel</div>
     </div>
   </div>
 </div>
